--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -303,7 +303,12 @@ footer.no-shadow {
 @media screen and (min-width: 1440px) {
     body, #typing-effect, #typing-container {
         font-size: 1.8rem;
-        padding: 1.4rem;
+        padding: 3rem;
+        /* padding-bottom: 1.5rem; */
+    }
+
+    main {
+        max-width: 100%;
         padding-bottom: 1.5rem;
     }
 
@@ -326,7 +331,10 @@ footer.no-shadow {
 /* (max-width: 1024px) */
 @media screen and (max-width: 1024px) {
     body, #typing-effect, #typing-container {
-        padding: 1.2rem;
+        padding: 1.5rem;
+    }
+    main {
+        max-width: 100%;
         padding-bottom: 3rem;
     }
 
@@ -361,12 +369,12 @@ footer.no-shadow {
     main {
         max-width: 100%;
         padding: 1rem;
-        padding-bottom: 5rem;
+        padding-bottom: 6rem;
     }
 
     #typing-effect {   
-       /*  font-size: 1.3rem; */
-        line-height: 1.7rem;
+        font-size: 1.4rem;
+        line-height: 1.8rem;
     }
     
     footer {
@@ -393,13 +401,14 @@ footer.no-shadow {
 /* (max-width: 480px) */
 @media screen and (max-width: 480px) {
     body {
+        padding: 1rem;
         font-size: 0.8rem;
     }
 
     main {
         max-width: 100%;
         padding: 1rem;
-        padding-bottom: 6rem;
+        padding-bottom: 7rem;
     }
 
     footer {
@@ -410,7 +419,7 @@ footer.no-shadow {
 
     
     #typing-effect {
-        /* font-size: 1.1rem; */
+        font-size: 1.3rem;
         line-height: 1.6rem;
     }
 
